--- a/test_runway.ipynb
+++ b/test_runway.ipynb
@@ -27,9 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Scraping at 2024-09-28 23:05:17.996102.\n",
+      "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224600001.\n",
+      "INFO:root:Extracting raw inventory from HTML.\n",
+      "INFO:root:Parsing raw inventory to DataFrame.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -67,7 +77,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -76,7 +86,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -85,7 +95,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -94,7 +104,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -103,7 +113,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -112,7 +122,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -121,7 +131,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -130,7 +140,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -139,7 +149,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -148,7 +158,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -157,7 +167,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -166,7 +176,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -175,7 +185,7 @@
        "      <td>XS</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -184,7 +194,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -193,7 +203,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -202,7 +212,7 @@
        "      <td>XS</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -211,7 +221,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -220,7 +230,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 22:57:02.035121</td>\n",
+       "      <td>2024-09-28 23:05:17.996102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -248,24 +258,24 @@
        "17   0224600001        モカ    M         False     NaN   \n",
        "\n",
        "                    timestamp  \n",
-       "0  2024-09-28 22:57:02.035121  \n",
-       "1  2024-09-28 22:57:02.035121  \n",
-       "2  2024-09-28 22:57:02.035121  \n",
-       "3  2024-09-28 22:57:02.035121  \n",
-       "4  2024-09-28 22:57:02.035121  \n",
-       "5  2024-09-28 22:57:02.035121  \n",
-       "6  2024-09-28 22:57:02.035121  \n",
-       "7  2024-09-28 22:57:02.035121  \n",
-       "8  2024-09-28 22:57:02.035121  \n",
-       "9  2024-09-28 22:57:02.035121  \n",
-       "10 2024-09-28 22:57:02.035121  \n",
-       "11 2024-09-28 22:57:02.035121  \n",
-       "12 2024-09-28 22:57:02.035121  \n",
-       "13 2024-09-28 22:57:02.035121  \n",
-       "14 2024-09-28 22:57:02.035121  \n",
-       "15 2024-09-28 22:57:02.035121  \n",
-       "16 2024-09-28 22:57:02.035121  \n",
-       "17 2024-09-28 22:57:02.035121  "
+       "0  2024-09-28 23:05:17.996102  \n",
+       "1  2024-09-28 23:05:17.996102  \n",
+       "2  2024-09-28 23:05:17.996102  \n",
+       "3  2024-09-28 23:05:17.996102  \n",
+       "4  2024-09-28 23:05:17.996102  \n",
+       "5  2024-09-28 23:05:17.996102  \n",
+       "6  2024-09-28 23:05:17.996102  \n",
+       "7  2024-09-28 23:05:17.996102  \n",
+       "8  2024-09-28 23:05:17.996102  \n",
+       "9  2024-09-28 23:05:17.996102  \n",
+       "10 2024-09-28 23:05:17.996102  \n",
+       "11 2024-09-28 23:05:17.996102  \n",
+       "12 2024-09-28 23:05:17.996102  \n",
+       "13 2024-09-28 23:05:17.996102  \n",
+       "14 2024-09-28 23:05:17.996102  \n",
+       "15 2024-09-28 23:05:17.996102  \n",
+       "16 2024-09-28 23:05:17.996102  \n",
+       "17 2024-09-28 23:05:17.996102  "
       ]
      },
      "metadata": {},
@@ -274,8 +284,8 @@
    ],
    "source": [
     "for inventory_id in inventory_ids:\n",
-    "    alert = RunwayScraper(inventory_id)\n",
-    "    inventory = alert.scrape()\n",
+    "    runway_scraper = RunwayScraper(inventory_id)\n",
+    "    inventory = runway_scraper.scrape()\n",
     "    display(inventory)"
    ]
   },
