add logging and example

--- a/test_runway.ipynb
+++ b/test_runway.ipynb
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-09-28 23:08:00.710082.\n",
+      "INFO:root:Scraping at 2024-09-28 23:35:20.960196.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224600001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n"
@@ -77,7 +77,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -86,7 +86,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -95,7 +95,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -104,7 +104,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -113,7 +113,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -122,7 +122,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -131,7 +131,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -140,7 +140,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -149,7 +149,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -158,7 +158,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -167,7 +167,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -176,7 +176,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -185,7 +185,7 @@
        "      <td>XS</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -194,7 +194,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -203,7 +203,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -212,7 +212,7 @@
        "      <td>XS</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -221,7 +221,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -230,7 +230,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:00.710082</td>\n",
+       "      <td>2024-09-28 23:35:20.960196</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -258,24 +258,24 @@
        "17   0224600001        モカ    M         False     NaN   \n",
        "\n",
        "                    timestamp  \n",
-       "0  2024-09-28 23:08:00.710082  \n",
-       "1  2024-09-28 23:08:00.710082  \n",
-       "2  2024-09-28 23:08:00.710082  \n",
-       "3  2024-09-28 23:08:00.710082  \n",
-       "4  2024-09-28 23:08:00.710082  \n",
-       "5  2024-09-28 23:08:00.710082  \n",
-       "6  2024-09-28 23:08:00.710082  \n",
-       "7  2024-09-28 23:08:00.710082  \n",
-       "8  2024-09-28 23:08:00.710082  \n",
-       "9  2024-09-28 23:08:00.710082  \n",
-       "10 2024-09-28 23:08:00.710082  \n",
-       "11 2024-09-28 23:08:00.710082  \n",
-       "12 2024-09-28 23:08:00.710082  \n",
-       "13 2024-09-28 23:08:00.710082  \n",
-       "14 2024-09-28 23:08:00.710082  \n",
-       "15 2024-09-28 23:08:00.710082  \n",
-       "16 2024-09-28 23:08:00.710082  \n",
-       "17 2024-09-28 23:08:00.710082  "
+       "0  2024-09-28 23:35:20.960196  \n",
+       "1  2024-09-28 23:35:20.960196  \n",
+       "2  2024-09-28 23:35:20.960196  \n",
+       "3  2024-09-28 23:35:20.960196  \n",
+       "4  2024-09-28 23:35:20.960196  \n",
+       "5  2024-09-28 23:35:20.960196  \n",
+       "6  2024-09-28 23:35:20.960196  \n",
+       "7  2024-09-28 23:35:20.960196  \n",
+       "8  2024-09-28 23:35:20.960196  \n",
+       "9  2024-09-28 23:35:20.960196  \n",
+       "10 2024-09-28 23:35:20.960196  \n",
+       "11 2024-09-28 23:35:20.960196  \n",
+       "12 2024-09-28 23:35:20.960196  \n",
+       "13 2024-09-28 23:35:20.960196  \n",
+       "14 2024-09-28 23:35:20.960196  \n",
+       "15 2024-09-28 23:35:20.960196  \n",
+       "16 2024-09-28 23:35:20.960196  \n",
+       "17 2024-09-28 23:35:20.960196  "
       ]
      },
      "metadata": {},
@@ -285,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-09-28 23:08:04.985703.\n",
+      "INFO:root:Scraping at 2024-09-28 23:35:25.130599.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224608001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -330,7 +330,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:04.985703</td>\n",
+       "      <td>2024-09-28 23:35:25.130599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -339,7 +339,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:04.985703</td>\n",
+       "      <td>2024-09-28 23:35:25.130599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -348,7 +348,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:04.985703</td>\n",
+       "      <td>2024-09-28 23:35:25.130599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -357,7 +357,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:04.985703</td>\n",
+       "      <td>2024-09-28 23:35:25.130599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -366,7 +366,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:04.985703</td>\n",
+       "      <td>2024-09-28 23:35:25.130599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -375,7 +375,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:08:04.985703</td>\n",
+       "      <td>2024-09-28 23:35:25.130599</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -383,12 +383,12 @@
       ],
       "text/plain": [
        "  inventory_id color size  is_available  amount                  timestamp\n",
-       "0   0224608001  ブラック    S          True     NaN 2024-09-28 23:08:04.985703\n",
-       "1   0224608001  ブラック    M          True     NaN 2024-09-28 23:08:04.985703\n",
-       "2   0224608001   レッド    S          True     NaN 2024-09-28 23:08:04.985703\n",
-       "3   0224608001   レッド    M          True     NaN 2024-09-28 23:08:04.985703\n",
-       "4   0224608001  ベージュ    S          True     NaN 2024-09-28 23:08:04.985703\n",
-       "5   0224608001  ベージュ    M          True     NaN 2024-09-28 23:08:04.985703"
+       "0   0224608001  ブラック    S          True     NaN 2024-09-28 23:35:25.130599\n",
+       "1   0224608001  ブラック    M          True     NaN 2024-09-28 23:35:25.130599\n",
+       "2   0224608001   レッド    S          True     NaN 2024-09-28 23:35:25.130599\n",
+       "3   0224608001   レッド    M          True     NaN 2024-09-28 23:35:25.130599\n",
+       "4   0224608001  ベージュ    S          True     NaN 2024-09-28 23:35:25.130599\n",
+       "5   0224608001  ベージュ    M          True     NaN 2024-09-28 23:35:25.130599"
       ]
      },
      "metadata": {},
@@ -398,29 +398,109 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-09-28 23:08:07.724359.\n",
-      "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368.\n"
+      "INFO:root:Scraping at 2024-09-28 23:35:28.831171.\n",
+      "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368.\n",
+      "INFO:root:Skipping for inventory_id: 519850129859551965196516368.\n",
+      "INFO:root:Scraping at 2024-09-28 23:35:30.383523.\n",
+      "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0024626006.\n",
+      "INFO:root:Extracting raw inventory from HTML.\n",
+      "INFO:root:Parsing raw inventory to DataFrame.\n",
+      "c:\\Users\\danie\\Desktop\\shopping-alert\\scrapers\\runway.py:76: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  inventory['amount'] = inventory['amount'].replace({None: np.nan})\n"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "Error when fetching from HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m inventory_id \u001b[38;5;129;01min\u001b[39;00m inventory_ids:\n\u001b[0;32m      2\u001b[0m     runway_scraper \u001b[38;5;241m=\u001b[39m RunwayScraper(inventory_id)\n\u001b[1;32m----> 3\u001b[0m     inventory \u001b[38;5;241m=\u001b[39m runway_scraper\u001b[38;5;241m.\u001b[39mscrape()\n\u001b[0;32m      4\u001b[0m     display(inventory)\n",
-      "File \u001b[1;32mc:\\Users\\danie\\Desktop\\shopping-alert\\scrapers\\runway.py:92\u001b[0m, in \u001b[0;36mRunwayScraper.scrape\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     90\u001b[0m timestamp \u001b[38;5;241m=\u001b[39m dt\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mnow()\n\u001b[0;32m     91\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScraping at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtimestamp\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 92\u001b[0m html \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fetch_html()\n\u001b[0;32m     93\u001b[0m raw_inventory \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_extract_raw_inventory(html)\n\u001b[0;32m     94\u001b[0m inventory \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parse_to_dataframe(raw_inventory, timestamp)\n",
-      "File \u001b[1;32mc:\\Users\\danie\\Desktop\\shopping-alert\\scrapers\\runway.py:38\u001b[0m, in \u001b[0;36mRunwayScraper._fetch_html\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     36\u001b[0m resp \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[1;32m---> 38\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mError when fetching from HTML from \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     39\u001b[0m html \u001b[38;5;241m=\u001b[39m resp\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m html\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Error when fetching from HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368."
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inventory_id</th>\n",
+       "      <th>color</th>\n",
+       "      <th>size</th>\n",
+       "      <th>is_available</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0024626006</td>\n",
+       "      <td>オフホワイト</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-09-28 23:35:30.383523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0024626006</td>\n",
+       "      <td>ブラック</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-09-28 23:35:30.383523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0024626006</td>\n",
+       "      <td>パープル</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-09-28 23:35:30.383523</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  inventory_id   color size  is_available  amount                  timestamp\n",
+       "0   0024626006  オフホワイト    F          True     NaN 2024-09-28 23:35:30.383523\n",
+       "1   0024626006    ブラック    F          True     NaN 2024-09-28 23:35:30.383523\n",
+       "2   0024626006    パープル    F          True     NaN 2024-09-28 23:35:30.383523"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Error when fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368 for inventory_id: 519850129859551965196516368.\n"
      ]
     }
    ],
    "source": [
+    "failed = []\n",
     "for inventory_id in inventory_ids:\n",
-    "    runway_scraper = RunwayScraper(inventory_id)\n",
-    "    inventory = runway_scraper.scrape()\n",
-    "    display(inventory)"
+    "    try:\n",
+    "        runway_scraper = RunwayScraper(inventory_id)\n",
+    "        inventory = runway_scraper.scrape()\n",
+    "    except Exception as error:\n",
+    "        failed.append(error)\n",
+    "        logging.info(f'Skipping for inventory_id: {inventory_id}.')\n",
+    "    else:\n",
+    "        display(inventory)\n",
+    "for error in failed:\n",
+    "    logging.error(error)"
    ]
   },
   {
