--- a/test_runway.ipynb
+++ b/test_runway.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "import yaml\n",
     "\n",
-    "from scrapers.runway import RunwayScraper\n",
+    "from scrapers import RunwayScraper\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)"
    ]
@@ -34,10 +34,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-09-28 23:45:26.066901.\n",
+      "INFO:root:Scraping at 2024-10-06 18:06:06.150474.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224600001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
-      "INFO:root:Parsing raw inventory to DataFrame.\n"
+      "INFO:root:Parsing raw inventory to DataFrame.\n",
+      "c:\\Users\\danie\\Desktop\\shopping-alert\\scrapers\\runway.py:78: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  inventory['amount'] = inventory['amount'].replace({None: np.nan})\n"
      ]
     },
     {
@@ -78,7 +80,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -88,7 +90,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -98,7 +100,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -108,7 +110,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,8 +119,8 @@
        "      <td>チャコールグレー</td>\n",
        "      <td>S</td>\n",
        "      <td>True</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -128,7 +130,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -138,7 +140,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -148,7 +150,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -158,7 +160,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -168,7 +170,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -177,8 +179,8 @@
        "      <td>ピンク</td>\n",
        "      <td>S</td>\n",
        "      <td>True</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -188,7 +190,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -196,9 +198,9 @@
        "      <td>0224600001</td>\n",
        "      <td>パープル</td>\n",
        "      <td>XS</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -206,9 +208,9 @@
        "      <td>0224600001</td>\n",
        "      <td>パープル</td>\n",
        "      <td>S</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -216,9 +218,9 @@
        "      <td>0224600001</td>\n",
        "      <td>パープル</td>\n",
        "      <td>M</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -226,9 +228,9 @@
        "      <td>0224600001</td>\n",
        "      <td>モカ</td>\n",
        "      <td>XS</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -236,9 +238,9 @@
        "      <td>0224600001</td>\n",
        "      <td>モカ</td>\n",
        "      <td>S</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -246,9 +248,9 @@
        "      <td>0224600001</td>\n",
        "      <td>モカ</td>\n",
        "      <td>M</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:26.066901</td>\n",
+       "      <td>2024-10-06 18:06:06.150474</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -261,40 +263,40 @@
        "1    0224600001     アイボリー    S          True     NaN   \n",
        "2    0224600001     アイボリー    M          True     NaN   \n",
        "3    0224600001  チャコールグレー   XS          True     NaN   \n",
-       "4    0224600001  チャコールグレー    S          True     5.0   \n",
+       "4    0224600001  チャコールグレー    S          True     NaN   \n",
        "5    0224600001  チャコールグレー    M          True     NaN   \n",
        "6    0224600001      ブラック   XS          True     NaN   \n",
        "7    0224600001      ブラック    S          True     NaN   \n",
        "8    0224600001      ブラック    M          True     NaN   \n",
        "9    0224600001       ピンク   XS          True     NaN   \n",
-       "10   0224600001       ピンク    S          True     4.0   \n",
+       "10   0224600001       ピンク    S          True     NaN   \n",
        "11   0224600001       ピンク    M          True     NaN   \n",
-       "12   0224600001      パープル   XS         False     NaN   \n",
-       "13   0224600001      パープル    S         False     NaN   \n",
-       "14   0224600001      パープル    M         False     NaN   \n",
-       "15   0224600001        モカ   XS         False     NaN   \n",
-       "16   0224600001        モカ    S         False     NaN   \n",
-       "17   0224600001        モカ    M         False     NaN   \n",
+       "12   0224600001      パープル   XS          True     NaN   \n",
+       "13   0224600001      パープル    S          True     NaN   \n",
+       "14   0224600001      パープル    M          True     NaN   \n",
+       "15   0224600001        モカ   XS          True     NaN   \n",
+       "16   0224600001        モカ    S          True     NaN   \n",
+       "17   0224600001        モカ    M          True     NaN   \n",
        "\n",
        "                    timestamp  \\\n",
-       "0  2024-09-28 23:45:26.066901   \n",
-       "1  2024-09-28 23:45:26.066901   \n",
-       "2  2024-09-28 23:45:26.066901   \n",
-       "3  2024-09-28 23:45:26.066901   \n",
-       "4  2024-09-28 23:45:26.066901   \n",
-       "5  2024-09-28 23:45:26.066901   \n",
-       "6  2024-09-28 23:45:26.066901   \n",
-       "7  2024-09-28 23:45:26.066901   \n",
-       "8  2024-09-28 23:45:26.066901   \n",
-       "9  2024-09-28 23:45:26.066901   \n",
-       "10 2024-09-28 23:45:26.066901   \n",
-       "11 2024-09-28 23:45:26.066901   \n",
-       "12 2024-09-28 23:45:26.066901   \n",
-       "13 2024-09-28 23:45:26.066901   \n",
-       "14 2024-09-28 23:45:26.066901   \n",
-       "15 2024-09-28 23:45:26.066901   \n",
-       "16 2024-09-28 23:45:26.066901   \n",
-       "17 2024-09-28 23:45:26.066901   \n",
+       "0  2024-10-06 18:06:06.150474   \n",
+       "1  2024-10-06 18:06:06.150474   \n",
+       "2  2024-10-06 18:06:06.150474   \n",
+       "3  2024-10-06 18:06:06.150474   \n",
+       "4  2024-10-06 18:06:06.150474   \n",
+       "5  2024-10-06 18:06:06.150474   \n",
+       "6  2024-10-06 18:06:06.150474   \n",
+       "7  2024-10-06 18:06:06.150474   \n",
+       "8  2024-10-06 18:06:06.150474   \n",
+       "9  2024-10-06 18:06:06.150474   \n",
+       "10 2024-10-06 18:06:06.150474   \n",
+       "11 2024-10-06 18:06:06.150474   \n",
+       "12 2024-10-06 18:06:06.150474   \n",
+       "13 2024-10-06 18:06:06.150474   \n",
+       "14 2024-10-06 18:06:06.150474   \n",
+       "15 2024-10-06 18:06:06.150474   \n",
+       "16 2024-10-06 18:06:06.150474   \n",
+       "17 2024-10-06 18:06:06.150474   \n",
        "\n",
        "                                                  url  \n",
        "0   https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -324,7 +326,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-09-28 23:45:30.629927.\n",
+      "INFO:root:Scraping at 2024-10-06 18:06:10.867874.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224608001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -370,7 +372,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:30.629927</td>\n",
+       "      <td>2024-10-06 18:06:10.867874</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -380,7 +382,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:30.629927</td>\n",
+       "      <td>2024-10-06 18:06:10.867874</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -390,7 +392,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:30.629927</td>\n",
+       "      <td>2024-10-06 18:06:10.867874</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -400,7 +402,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:30.629927</td>\n",
+       "      <td>2024-10-06 18:06:10.867874</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -410,7 +412,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:30.629927</td>\n",
+       "      <td>2024-10-06 18:06:10.867874</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -420,7 +422,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:30.629927</td>\n",
+       "      <td>2024-10-06 18:06:10.867874</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -429,12 +431,12 @@
       ],
       "text/plain": [
        "  inventory_id color size  is_available  amount                  timestamp  \\\n",
-       "0   0224608001  ブラック    S          True     NaN 2024-09-28 23:45:30.629927   \n",
-       "1   0224608001  ブラック    M          True     NaN 2024-09-28 23:45:30.629927   \n",
-       "2   0224608001   レッド    S          True     NaN 2024-09-28 23:45:30.629927   \n",
-       "3   0224608001   レッド    M          True     NaN 2024-09-28 23:45:30.629927   \n",
-       "4   0224608001  ベージュ    S          True     NaN 2024-09-28 23:45:30.629927   \n",
-       "5   0224608001  ベージュ    M          True     NaN 2024-09-28 23:45:30.629927   \n",
+       "0   0224608001  ブラック    S          True     NaN 2024-10-06 18:06:10.867874   \n",
+       "1   0224608001  ブラック    M          True     NaN 2024-10-06 18:06:10.867874   \n",
+       "2   0224608001   レッド    S          True     NaN 2024-10-06 18:06:10.867874   \n",
+       "3   0224608001   レッド    M          True     NaN 2024-10-06 18:06:10.867874   \n",
+       "4   0224608001  ベージュ    S          True     NaN 2024-10-06 18:06:10.867874   \n",
+       "5   0224608001  ベージュ    M          True     NaN 2024-10-06 18:06:10.867874   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -452,10 +454,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-09-28 23:45:34.387768.\n",
+      "INFO:root:Scraping at 2024-10-06 18:06:14.600966.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368.\n",
       "INFO:root:Skipping for inventory_id: 519850129859551965196516368.\n",
-      "INFO:root:Scraping at 2024-09-28 23:45:35.931401.\n",
+      "INFO:root:Scraping at 2024-10-06 18:06:16.153735.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0024626006.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -501,7 +503,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:35.931401</td>\n",
+       "      <td>2024-10-06 18:06:16.153735</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -511,7 +513,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:35.931401</td>\n",
+       "      <td>2024-10-06 18:06:16.153735</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -521,7 +523,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-09-28 23:45:35.931401</td>\n",
+       "      <td>2024-10-06 18:06:16.153735</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -530,9 +532,9 @@
       ],
       "text/plain": [
        "  inventory_id   color size  is_available  amount                  timestamp  \\\n",
-       "0   0024626006  オフホワイト    F          True     NaN 2024-09-28 23:45:35.931401   \n",
-       "1   0024626006    ブラック    F          True     NaN 2024-09-28 23:45:35.931401   \n",
-       "2   0024626006    パープル    F          True     NaN 2024-09-28 23:45:35.931401   \n",
+       "0   0024626006  オフホワイト    F          True     NaN 2024-10-06 18:06:16.153735   \n",
+       "1   0024626006    ブラック    F          True     NaN 2024-10-06 18:06:16.153735   \n",
+       "2   0024626006    パープル    F          True     NaN 2024-10-06 18:06:16.153735   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/002462...  \n",
